--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <title>Crack Classifier</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Loading backdrop shown until React mounts -->
+      <div id="loading-backdrop" style="position:fixed;inset:0;z-index:9999;display:flex;flex-direction:column;align-items:center;justify-content:center;background:#f9fafb;gap:20px;animation:fadeIn .4s ease-out;">
+        <!-- App icon -->
+        <div style="width:56px;height:56px;border-radius:14px;background:#2563eb;display:flex;align-items:center;justify-content:center;animation:scaleIn .5s ease-out,float 2.5s ease-in-out infinite .5s;">
+          <svg width="28" height="28" fill="none" stroke="white" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"/>
+          </svg>
+        </div>
+        <!-- Title -->
+        <div style="text-align:center;animation:slideUp .5s ease-out .15s both;">
+          <p style="font-family:system-ui,sans-serif;font-size:16px;font-weight:700;color:#111827;margin:0;">Crack Classifier</p>
+          <p style="font-family:system-ui,sans-serif;font-size:12px;color:#9ca3af;margin:4px 0 0;">Crack Documentation</p>
+        </div>
+        <!-- Spinner -->
+        <div style="animation:slideUp .5s ease-out .3s both;">
+          <div style="width:32px;height:32px;border:3px solid #e5e7eb;border-top-color:#2563eb;border-radius:50%;animation:spin .7s linear infinite;"></div>
+        </div>
+        <!-- Loading text with pulse -->
+        <p style="font-family:system-ui,sans-serif;font-size:13px;color:#9ca3af;margin:0;animation:slideUp .5s ease-out .45s both,pulse 1.5s ease-in-out infinite .8s;">Loading...</p>
+      </div>
+      <style>
+        @keyframes spin{to{transform:rotate(360deg)}}
+        @keyframes fadeIn{from{opacity:0}to{opacity:1}}
+        @keyframes scaleIn{from{transform:scale(0.5);opacity:0}to{transform:scale(1);opacity:1}}
+        @keyframes slideUp{from{transform:translateY(12px);opacity:0}to{transform:translateY(0);opacity:1}}
+        @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+        @keyframes pulse{0%,100%{opacity:1}50%{opacity:.4}}
+      </style>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
